# market-maker-rl

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/market_making_rl_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mmrl/: __init__.py  config.py
src/mmrl/agents/: networks.py  random_agent.py
src/mmrl/data/: binance_client.py  depth_sync.py  order_book.py  trades.py
src/mmrl/env/: actions.py  market_making_env.py
src/mmrl/features/: state_builder.py  trade_buckets.py
src/mmrl/representation/: __init__.py  market_encoder.py
src/mmrl/scripts/: audit_fills.py  audit_fills_plain.py  build_pretrain_dataset.py  collect_data.py  evaluate_dqn.py  make_toy_replay.py  notes.txt  pretrain_encoder.py  replay_io.py  run_env_smoke.py  split_replay.py  train_dqn.py  validate_replay.py
src/mmrl/sim/: fill_model.py  orders.py  paper_engine.py  portfolio.py  reward.py  risk.py
src/mmrl/strategies/: baseline.py
tests/: test_fill_model.py  test_order_book.py  test_risk.py
